<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Oeconomia</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_menu_page">MenuPage</string>
    <string name="title_activity_country_selector">CountrySelector</string>
    <string name="title_activity_data_page">DataPage</string>
    <string name="title_activity_graph">Graph</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_search_screen">SearchScreen</string>
    <string name="finance">Finance</string>
    <string name="people">People</string>
    <string name="energy">Energy &amp; Infrastructure</string>
    <string name="graph">Get Graph</string>
    <string name="home">Home</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_data__page">Data_Page</string>
    <string name="title_activity_options_page">Options Page</string>
    <string name="button_Save">Save</string>
    <string name="tv_change_font">Change font: </string>
    <string name="tv_change_theme_title">Change the app theme: </string>
    <string name="tv_help_q1_title">Country Selecting Help</string>
    <string name="tv_help_q2_title">Favourites Help</string>
    <string name="tv_help_q3_title">Graph Help</string>
    <string name="title_activity_favourites_page">FavouritesPage</string>
    <string name="title_activity_country_selector2">CountrySelector2</string>

    <color name="lightGrey">#EEEEEE</color>

    <string name="clear">Clear</string>
    <string name="search">Search:</string>
    <string name="country">Country:</string>
    <string name="hint">Enter Country...</string>
    <string name="oneC">One Country</string>
    <string name="twoC">Two Countries</string>
    <string name="compare">Compare</string>

    <color name="white">#FFFFFF</color>

    <string name="title_activity_scatter_diagram">ScatterDiagram</string>
    <string name="title_activity_bar_chart">BarChart</string>
    <string name="title_activity_line_chart">LineChart</string>

</resources>