<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".SearchScreen" >
	
    <RadioGroup
        android:id="@+id/rgButtons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2" >

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickRadioButton1"
            android:text="@string/oneC" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="17dp"
            android:layout_weight="1"
            android:text="@string/twoC" />
    </RadioGroup>
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/listView1"
        android:layout_below="@id/rgButtons"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:gravity="center_vertical"
        android:text="@string/search"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:choiceMode="singleChoice"
        android:listSelector="@android:color/darker_gray" >
    </ListView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textView1"
        android:layout_marginTop="88dp"
        android:text="@string/country"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/listView1"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/hint"
        android:textSize="20dp" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/llCountrySelector1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="2" >

        <Button
            android:id="@+id/button2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="clearTwoCountryView"
            android:text="@string/clear" />

        <Button
            android:id="@+id/button1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickCompare"
            android:text="@string/compare" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCountrySelector2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llCountrySelector1"
        android:weightSum="2" >

        <TextView
            android:id="@+id/textViewCountry1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/lightGrey"
            android:text="@+id/FirstSelectedCountry"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textViewCountry2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/lightGrey"
            android:gravity="right"
            android:text="@+id/SecondSelectedCountry"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

</RelativeLayout>