<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="95" >

        <!-- Compare Button -->

        <Button
            android:id="@+id/B_Home"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="homeOnCLick"
            android:text="@string/home" />

        <!-- People section -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="5"
            android:orientation="horizontal"
            android:weightSum="2" >

            <TextView
                android:id="@+id/tv_FirstCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/tv_SecondCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_weight="30"
            android:orientation="vertical"
            android:weightSum="10" >

            <Button
                android:id="@+id/B_People"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="center"
                android:onClick="peopleOnClick"
                android:text="@string/people"
                android:textSize="20dp"
                android:textStyle="bold" />

            <WebView
                android:id="@+id/wv_People"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!-- Finance section -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_weight="30"
            android:orientation="vertical"
            android:weightSum="10" >

            <Button
                android:id="@+id/B_Finance"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="center"
                android:onClick="financeOnClick"
                android:text="@string/finance"
                android:textSize="20dp"
                android:textStyle="bold" />

            <WebView
                android:id="@+id/wv_Finance"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!-- Energy section -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_weight="30"
            android:orientation="vertical"
            android:weightSum="10" >

            <Button
                android:id="@+id/B_Energy"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="center"
                android:onClick="energyOnClick"
                android:text="@string/energy"
                android:textSize="20dp"
                android:textStyle="bold" />

            <WebView
                android:id="@+id/wv_Energy"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>